--- a/Application/Challenge.Application.csproj
+++ b/Application/Challenge.Application.csproj
@@ -52,13 +52,13 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj">
+    <ProjectReference Include="..\Domain\Challenge.Domain.csproj">
       <Project>{9F1F4D42-C9A2-49FA-AAEA-9084DBF18E74}</Project>
-      <Name>Domain</Name>
+      <Name>Challenge.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Persistence\Persistence.csproj">
+    <ProjectReference Include="..\Persistence\Challenge.Persistence.csproj">
       <Project>{0B54C0BD-CE80-4FFE-BCF1-04C6CDFE69B2}</Project>
-      <Name>Persistence</Name>
+      <Name>Challenge.Persistence</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
