--- a/Persistence/Challenge.Persistence.csproj
+++ b/Persistence/Challenge.Persistence.csproj
@@ -91,9 +91,9 @@
     <Folder Include="Users\EF\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj">
+    <ProjectReference Include="..\Domain\Challenge.Domain.csproj">
       <Project>{9F1F4D42-C9A2-49FA-AAEA-9084DBF18E74}</Project>
-      <Name>Domain</Name>
+      <Name>Challenge.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
