--- a/Challenge.Api/packages.config
+++ b/Challenge.Api/packages.config
@@ -11,6 +11,8 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net46" />
   <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
