REST API conventions

--- a/Challenge.Api/Challenge.Api.csproj
+++ b/Challenge.Api/Challenge.Api.csproj
@@ -132,7 +132,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityWebApiActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Users\UserController.cs" />
+    <Compile Include="Users\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
